--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.FinalProj"
         tools:targetApi="31">
         <activity
+            android:name=".tapModule"
+            android:exported="false" />
+        <activity
+            android:name=".moduleSetup"
+            android:exported="false" />
+        <activity
+            android:name=".moduleView"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
